$Id$


v0.83.16	13-Mar-2006

	mbfido:
		If sending crash to a node not in the setup, a default
		archiver is now set to ZIP.
		Accept unpacket mail for own points.


v0.83.15	05-Mar-2006 - 13-Mar-2006

	mbsebbs:
		Upgraded ASCII OLR download to the latest discussions.
		Made some minor changes in internal zmodem.


v0.83.14	23-Feb-2006 - 05-Mar-2006.

	upgrade:
		Start and stop mbsetup, this will upgrade the nodes settings.

	mbfido:
		Uses archiver from the setup to pack mail for a node.

	mbsebbs:
		Added Change archiver menu.
		Added crontrol-U0 to display current archiver.
		Changes to OLR ASCII download:
		- area files are named after area tag if possible, dots are
		  replaced by underscores and extension is .text.
		- If available each message now has a msgid in the header.
		- Added a .info file with control information.

	mbmon:
		Better user input checking in chat.
		Safer display in chat.

	mbsetup:
		Added archiver selection for nodes in node setup.
		In archiver select added checks for valid archivers and allowed
		escape without selecting an archiver.
		Added selection of archiver select menu.

	mbtask:
		Safer code for chat.
		Added unformatted logging.

	lang:
		New prompts 86, 87, 88 and 89.

	examples:
		Updated Engish menus and txtfiles.


v0.83.13	13-Feb-2006 - 23-Feb-2006

	upgrade:
		Start mbsetup and leave. If files databases need to be fixed
		it will then be done.

	mbselib.a:
		Fixed another 32/64 bit issue in the files databases and added
		automatic correction if detected.

	mbsebbs:
		Writes LINES and COLUMNS environment into data.msg so that the
		joe editor can use that.
		Changed zmodem transmitter timeout to 60 seconds and changed
		the zmodem init fase so that clients that don't start automatic
		have a chance to start the transfer.
		The zmodem transmitter now uses buffered output.

	mbmsg:
		With the post function the right time is now used.

	mbcico:
		Added real error message for failed outgoing IP connections.

	mbtask: